[package]
name = "moon-dst"
version = "2026.1.0"
edition = "2021"
description = "MoonBit dependency updater CLI"
license = "MIT"

[[bin]]
name = "moon-dst"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rayon = "1"
anyhow = "1"
num_cpus = "1"
